--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -766,11 +766,11 @@
 	<div class="bottom-nav">
 		<center>
 			<button type="submit" ng-click="updatePost()" class="btn btn-primary">
-				<span class="glyphicon glyphicon-pencil"></span> Cập nhật mẫu cũ
+				<span class="glyphicon glyphicon-pencil"></span> Cập nhật mẫu
 			</button>
-			<button type="button" ng-click="saveAs()" class="btn btn-success">
+		<!-- 	<button type="button" ng-click="saveAs()" class="btn btn-success">
 				<span class="glyphicon glyphicon-floppy-saved"></span> Lưu mẫu mới
-			</button>
+			</button> -->
 			<div class="pull-right">
 				<button id="back-to-top" type="button" class="btn btn-circle btn-default"><span class="glyphicon glyphicon-chevron-up"></span> Top</button>
 			</div>
