--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -1,5 +1,5 @@
 <form id="form-content">
-	<input type="text" name="id" style="display: none;" ng-model="data.id">
+	<input type="text" name="id" id="obId" style="display: none;" ng-model="data.id">
 	<input type="hidden" name="randomStr" value="{{randomStr}}" id="randomStr">
 	<input type="hidden" name="sample" value="dong-vat" id="sample">
 	<center><h2>Chỉnh sửa mẫu dữ liệu cổ sinh > Đề tài: {{maDeTai}}</h2></center>
@@ -758,11 +758,11 @@
 	<div class="bottom-nav">
 		<center>
 			<button type="submit" ng-click="updatePost()" class="btn btn-primary">
-				<span class="glyphicon glyphicon-pencil"></span> Cập nhật mẫu cũ
+				<span class="glyphicon glyphicon-pencil"></span> Cập nhật mẫu
 			</button>
-			<button type="button" ng-click="saveAs()" class="btn btn-success">
+			<!-- <button type="button" ng-click="saveAs()" class="btn btn-success">
 				<span class="glyphicon glyphicon-floppy-saved"></span> Lưu mẫu mới
-			</button>
+			</button> -->
 			<div class="pull-right">
 				<button id="back-to-top" type="button" class="btn btn-circle btn-default">
 					<span class="glyphicon glyphicon-chevron-up"></span> Top
