duplicate for all sample

--- a/app/views/users/manage-post/manage-post.template.html
+++ b/app/views/users/manage-post/manage-post.template.html
@@ -9,7 +9,7 @@
 			</div>
 		</div>
 	</div>
-	<center><h3><b>Quản lý mẫu vật đã đăng {{data.length}}</b></h3></center>
+	<center><h3><b>Quản lý mẫu vật đã đăng</b></h3></center>
 	<table class="table">
 		<thead>
 			<tr>
