--- a/views/display.ejs
+++ b/views/display.ejs
@@ -216,7 +216,48 @@
    	function ob(x) {
    		return document.getElementById(x)
    	}
-   	var mymap = L.map('leafletdiv').setView([20.9850683, 105.8437908], 13);
+   	<% 
+   		let longitude = 0;
+			let latitude = 0;
+			let zoom = 0;
+   	%>
+   	<% 
+   	if (!(/([0-9 ]+)(°|độ)([0-9 ]+)('|phút)([0-9 ]+)("|giây)/.test(obj1.kinhDo.toLowerCase()))){
+			// console.log('Tọa độ thực')
+			
+			longitude = parseFloat(obj1.viDo.toLowerCase());
+		}
+		else {
+			// console.log('Tọa độ rời rạc')
+			let regex = /([0-9 ]+)(°|độ)([0-9 ]+)('|phút)([0-9 ]+)("|giây)/;
+			let matches = obj1.kinhDo.toLowerCase().match(regex);
+			longitude = parseInt(matches[1]) + parseInt(matches[3]) / 60 + parseInt(matches[5]) / 60 / 60;
+		}
+		if (!(/([0-9 ]+)(°|độ)([0-9 ]+)('|phút)([0-9 ]+)("|giây)/.test(obj1.viDo.toLowerCase()))){
+			// console.log('Tọa độ thực')
+			latitude = parseFloat(obj1.viDo.toLowerCase());
+		}
+		else {
+			// console.log('Tọa độ rời rạc')
+			// calculate
+			// latitude = parseFloat(obj1.viDo.toLowerCase());
+			let regex = /([0-9 ]+)(°|độ)([0-9 ]+)('|phút)([0-9 ]+)("|giây)/;
+			let matches = obj1.viDo.toLowerCase().match(regex);
+			latitude = parseInt(matches[1]) + parseInt(matches[3]) / 60 + parseInt(matches[5]) / 60 / 60;
+		}
+
+		console.log(longitude);
+		console.dir(latitude);
+
+		%>
+		var longitude = <%= longitude %>
+   	var latitude = <%= latitude %>
+   	var zoom = 14
+   	var mymap = L.map('leafletdiv').setView([latitude, longitude], zoom);
+   	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+    }).addTo(mymap);
+    var marker = L.marker([latitude, longitude]).addTo(mymap);
    </script>
 	</body>
 </html>
