--- a/app/asset/css/main.css
+++ b/app/asset/css/main.css
@@ -222,7 +222,7 @@ a.nav:hover{
 .tabs > li > a {
     border: 1px solid #ddd;
     margin: 0px;
-    padding: 5px 5px;
+    padding: 10px 10px;
 }
 
 .tabs > li.active > a, .tabs > li.active > a:hover, .tabs > li.active > a:focus {
@@ -230,8 +230,8 @@ a.nav:hover{
 }
 
 .group > li > a{
-    background-color: #1a439a;
-    color: #fff;
+    /*background-color: #1a439a;*/
+    /*color: #fff;*/
 }
 
 .group > li > a:hover{
