--- a/views/display.ejs
+++ b/views/display.ejs
@@ -5,8 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<% include header %>
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css"
-   integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
-   crossorigin=""/>
+	 integrity="sha512-M2wvCLH6DSRazYeZRIm1JnYyh22purTM+FDB5CsyxtQJYeKq83arPe5wgbNmcFXGqiSH2XR8dT/fJISVA1r/zQ=="
+	 crossorigin=""/>
 
 	</head>
 	<body>
@@ -205,59 +205,98 @@
 				</table>
 			</div>
 		</div>
-		<div id="leafletdiv" style="height: 600px">
+		<div id="leafletdiv" style="height: 600px; width: 800px; margin: auto auto">
 				
-			</div>
+		</div>
+		<div id="images"></div>
+		<div id="imgleaf"></div>
 		<!-- Make sure you put this AFTER Leaflet's CSS -->
- 		<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
-   integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
-   crossorigin=""></script>
-   <script>
-   	function ob(x) {
-   		return document.getElementById(x)
-   	}
-   	<% 
-   		let longitude = 0;
+		<script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"
+	 integrity="sha512-lInM/apFSqyy1o6s89K4iQUKg6ppXEgsVxT35HbzUupEVRh2Eu9Wdl4tHj7dZO0s1uvplcYGmt3498TtHq+log=="
+	 crossorigin=""></script>
+	 <!--Add mapbox.js -->
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.2/mapbox.css' rel='stylesheet' />
+	 <script type="text/javascript" src='/javascripts/leaflet.browser.print.min.js'></script>
+	 <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-image/v0.0.4/leaflet-image.js'></script>
+	 <script>
+		function ob(x) {
+			return document.getElementById(x)
+		}
+		<% 
+			let longitude = 0;
 			let latitude = 0;
 			let zoom = 0;
-   	%>
-   	<% 
-   	let regex = /([0-9 ]+)(°|độ)([0-9 ]+)('|phút)([0-9 ]+)("|giây)/;
-   	if (!(regex.test(obj1.kinhDo.toLowerCase()))){
-			// console.log('Tọa độ thực')
-			longitude = parseFloat(obj1.kinhDo.toLowerCase());
-		}
-		else {
-			// console.log('Tọa độ rời rạc')
-			let matches = obj1.kinhDo.toLowerCase().match(regex);
-			longitude = parseInt(matches[1]) + parseInt(matches[3]) / 60 + parseInt(matches[5]) / 60 / 60;
-		}
-		if (!(regex.test(obj1.viDo.toLowerCase()))){
-			// console.log('Tọa độ thực')
-			latitude = parseFloat(obj1.viDo.toLowerCase());
-		}
-		else {
-			// console.log('Tọa độ rời rạc')
-			let matches = obj1.viDo.toLowerCase().match(regex);
-			latitude = parseInt(matches[1]) + parseInt(matches[3]) / 60 + parseInt(matches[5]) / 60 / 60;
+		%>
+		<% 
+		let regex = /([0-9 ]+)(°|độ)([0-9 ]+)('|phút)([0-9 ]+)("|giây)/;
+		if (obj1.kinhDo && obj1.viDo) {
+			if (!(regex.test(obj1.kinhDo.toLowerCase()))){
+				// console.log('Tọa độ thực')
+				longitude = parseFloat(obj1.kinhDo.toLowerCase());
+			}
+			else {
+				// console.log('Tọa độ rời rạc')
+				let matches = obj1.kinhDo.toLowerCase().match(regex);
+				longitude = parseInt(matches[1]) + parseInt(matches[3]) / 60 + parseInt(matches[5]) / 60 / 60;
+			}
+			if (!(regex.test(obj1.viDo.toLowerCase()))){
+				// console.log('Tọa độ thực')
+				latitude = parseFloat(obj1.viDo.toLowerCase());
+			}
+			else {
+				// console.log('Tọa độ rời rạc')
+				let matches = obj1.viDo.toLowerCase().match(regex);
+				latitude = parseInt(matches[1]) + parseInt(matches[3]) / 60 + parseInt(matches[5]) / 60 / 60;
+			}
 		}
 		%>
 		var longitude = <%= longitude %>
-   	var latitude = <%= latitude %>
-   	console.log(longitude);
+		var latitude = <%= latitude %>
+		console.log(longitude);
 		console.log(latitude);
-   	var zoom = 7
-   	var mymap = L.map('leafletdiv').setView([latitude, longitude], zoom);
-   	L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
-    }).addTo(mymap);
-    var marker = L.marker([latitude, longitude]).addTo(mymap);
-    <% if (coordinationArr) { %>
-    	var c = <%- JSON.stringify(coordinationArr) %>
-    	for(var i = 0; i < c.length; i++) {
-    		var marker = L.marker(c[i]).addTo(mymap);
-    	}
-    <% } %>
-   </script>
+		var zoom = 7
+		var mymap = L.map('leafletdiv').setView([latitude, longitude], zoom);
+		L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+				attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+		}).addTo(mymap);
+		L.control.layers({
+	      'Satellite Map': L.mapbox.tileLayer('bobbysud.map-l4i2m7nd', {
+	          detectRetina: true
+	      }).addTo(mymap),
+	      'Terrain Map': L.mapbox.tileLayer('bobbysud.i2pfp2lb', {
+	          detectRetina: true
+	      })
+	  }).addTo(mymap);
+
+		var marker = L.marker([latitude, longitude]).addTo(mymap);
+		<% if (coordinationArr) { %>
+			var c = <%- JSON.stringify(coordinationArr) %>
+			for(var i = 0; i < c.length; i++) {
+				var marker = L.marker(c[i], {title: i, riseOnHover: true}).addTo(mymap);
+			}
+		<% } %>
+	 </script>
+	 <script>
+		// var map = L.map('imgleaf').setView([38.9, -77.03], 14)
+		// L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+		// 		attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
+		// }).addTo(mymap);
+		var d1 = new Date();
+		leafletImage(mymap, function(err, canvas) {
+			// now you have canvas
+			// example thing to do with that canvas:
+			var d2 = new Date();
+			console.log(d2.getTime() - d1.getTime(), ' miliseconds');
+			var img = document.createElement('img');
+			var dimensions = mymap.getSize();
+			img.width = dimensions.x;
+			img.height = dimensions.y;
+			img.src = canvas.toDataURL();
+			document.getElementById('images').innerHTML = '';
+			document.getElementById('images').appendChild(img);
+		});
+		// L.browserPrint().addTo(mymap)
+	 </script>
 	</body>
 </html>
