--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -378,23 +378,27 @@
 				</div>
 
 				<div class="container-fluid col-sm-12">
-					<div class="col-sm-6">
+					<div class="col-sm-4">
 						{{"ani.viDo" | translate }} <span class="has-required">(*)</span>:
-						<input type="text" id="dms" ng-init="showCoor = 'false'; data.viDo=''" ng-show="!showCoor" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
+						<input type="text" id="viDo" ng-init="showCoor = 'false'; data.viDo=''" ng-show="!showCoor" title="{{tooltips['viDo']}}" name="viDo" ng-model="data.viDo" class="input-form form-control">
 						<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['viDo']}}">
 							<input type="number" step="1" ng-model= "vido_do" ng-change="latChange()" class = "coordinates" name=""> độ
 							<input type="number" step="1" ng-model= "vido_phut" ng-change="latChange()" class = "coordinates" name=""> phút
 							<input type="number" step="1" ng-model= "vido_giay" ng-change="latChange()" class = "coordinates" name=""> giây
 						</div>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-4">
 						{{"ani.kinhDo" | translate }} <span class="has-required">(*)</span>:
-						<input type="text" id="dms" ng-show="!showCoor" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
+						<input type="text" id="kinhDo" ng-show="!showCoor" title="{{tooltips['kinhDo']}}" name="kinhDo" ng-model="data.kinhDo" class="input-form form-control">
 						<div id="dd" ng-show="showCoor" style="margin-top: 5px;" title="{{tooltips['kinhDo']}}">
 							<input type="number" step="1" ng-model="kinhdo_do" ng-change="lonChange()" class = "coordinates" name=""> độ
 							<input type="number" step="1" ng-model="kinhdo_phut" ng-change="lonChange()" class = "coordinates" name=""> phút
 							<input type="number" step="1" ng-model="kinhdo_giay" ng-change="lonChange()" class = "coordinates" name=""> giây
 						</div>
+					</div>
+					<div class="col-sm-4" ng-controller="GoogleMapController">
+						<label> </label><br>
+						<button type="button" class="btn btn-success" ng-click="showModal()">Chọn trên bản đồ</button>
 					</div>
 				</div>
 			</div>
@@ -951,3 +955,20 @@
 </form>
 <!-- Custom input file -->
 <script type="text/javascript" src="asset/js/buttonfile/custom-file-input.js"></script>
+
+<script type="text/ng-template" id="storeShowModal.html">
+    <div class="modal-header">
+	    <button type="button" class="close" data-dismiss="modal" data-ng-click="cancel()" aria-hidden="true">&times;</button>
+	    <h4 class="modal-title text-align-center fw-bold mt" id="myModalLabel18">{{ store.name }}</h4>
+	</div>
+	<div class="modal-body bg-gray-lighter">
+	    <div class="row">
+	        <div class="col-md-12">
+	            <ng-map center="{{ center }}" zoom="10">
+	                <marker position="{{ position }}"></marker>
+	            </ng-map>
+	        </div>
+	    </div>
+	</div>
+</script> 
+<script type="text/javascript" src="https://maps.google.com/maps/api/js"></script>
