--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -139,6 +139,7 @@
 					<label class="control-label">08. {{"ani.ngayDinhTen" | translate }}: </label>
 					<select ng-model="date_ndt" class="select-date">
 						<option value="dd/mm/yyyy">Full date</option>
+						<option value="mm/yyyy">Mon/Year</option>
 						<option value="yyyy">Year</option>
 					</select>
 					<input type="text" title="{{tooltips['ngayDinhTen']}}" id="ngayDinhTen" name="ngayDinhTen" ng-model="data.ngayDinhTen" placeholder="{{date_ndt}}" class="input-form form-control datepicker">
@@ -292,6 +293,7 @@
 					<label>19. {{"ani.thoiGianThuMau" | translate }}<span class="has-required"> (*)</span>:</label>
 					<select ng-model="date_tgtm" class="select-date">
 						<option value="dd/mm/yyyy">Full date</option>
+						<option value="mm/yyyy">Mon/Year</option>
 						<option value="yyyy">Year</option>
 					</select>
 					<input type="text" ng-model="data.thoiGianThuMau" title="{{tooltips['thoiGianThuMau']}}" name="thoiGianThuMau" id="thoiGianThuMau" placeholder="{{date_tgtm}}" class="input-form form-control datepicker">
@@ -467,6 +469,7 @@
 					<label>33. {{"ani.thoiGianGiamDinh" | translate }}:</label>
 					<select ng-model="date_tgpt" class="select-date">
 						<option value="dd/mm/yyyy">Full date</option>
+						<option value="mm/yyyy">Mon/Year</option>
 						<option value="yyyy">Year</option>
 					</select>
 					<input type="text" ng-model="data.thoiGianGiamDinh" title="{{tooltips['thoiGianGiamDinh']}}" name="thoiGianGiamDinh" placeholder="{{date_tgpt}}" id="thoiGianGiamDinh" class="input-form form-control datepicker">
@@ -654,6 +657,7 @@
 						{{"ani.thoiGianXuLy" | translate }}:
 						<select ng-model="date_tgct" class="select-date">
 							<option value="dd/mm/yyyy">Full date</option>
+							<option value="mm/yyyy">Mon/Year</option>
 							<option value="yyyy">Year</option>
 						</select>
 						<input type="text" id="thoiGianXuLy" title="{{tooltips['thoiGianXuLy']}}" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" placeholder="{{date_tgct}}" class="input-form form-control datepicker">
@@ -802,6 +806,7 @@
 					<label>53. {{"ani.ngayNhapMau" | translate }}: </label>
 					<select ng-model="date_nnm" class="select-date">
 						<option value="dd/mm/yyyy">Full date</option>
+						<option value="mm/yyyy">Mon/Year</option>
 						<option value="yyyy">Year</option>
 					</select>
 					<input type="text" ng-model="data.ngayNhapMau" title="{{tooltips['ngayNhapMau']}}" id="ngayNhapMau" name="ngayNhapMau" placeholder="{{date_nnm}}" class="input-form form-control datepicker">
