--- a/app/views/users/edit/edit-geological-form.template.html
+++ b/app/views/users/edit/edit-geological-form.template.html
@@ -72,6 +72,7 @@
                     <label>08. Ngày định tên: </label>
                     <select ng-model="date_ndt" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
+                        <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
                     <input type="text" class="input-form form-control datepicker" id="ngayDinhTen" title="{{tooltips['ngayDinhTen']}}" name="ngayDinhTen" placeholder="{{date_ndt}}" ng-model="data.ngayDinhTen">
@@ -227,6 +228,7 @@
                     <label>19. Thời gian thu mẫu <span class="has-required">(*)</span>:</label>
                     <select ng-model="date_tgtm" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
+                        <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
                     <input type="text" class="input-form form-control datepicker" id="thoiGianThuMau" title="{{tooltips['thoiGianThuMau']}}" placeholder="{{date_tgtm}}" name="thoiGianThuMau" ng-model="data.thoiGianThuMau">
@@ -381,6 +383,7 @@
                     <label>29. Thời gian phân tích/giám định/định loại mẫu:</label>
                     <select ng-model="date_tgpt" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
+                        <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
                     <input type="text" class="input-form form-control datepicker" id="thoiGianGiamDinh" title="{{tooltips['thoiGianGiamDinh']}}" placeholder="{{date_tgpt}}" name="thoiGianGiamDinh" ng-model="data.thoiGianGiamDinh">
@@ -590,6 +593,7 @@
                         Thời gian xử lý chế tác:
                         <select ng-model="date_tgct" class="select-date">
                             <option value="dd/mm/yyyy">Full date</option>
+                            <option value="mm/yyyy">Mon/Year</option>
                             <option value="yyyy">Year</option>
                         </select>
                         <input type="text" title="{{tooltips['thoiGianXuLy']}}" id="thoiGianXuLy" name="thoiGianXuLy" ng-model="data.thoiGianXuLy" placeholder="{{date_tgct}}" class="input-form form-control datepicker">
@@ -768,6 +772,7 @@
                     <label>57. Ngày nhập mẫu: </label>
                     <select ng-model="date_nnm" class="select-date">
                         <option value="dd/mm/yyyy">Full date</option>
+                        <option value="mm/yyyy">Mon/Year</option>
                         <option value="yyyy">Year</option>
                     </select>
                     <input type="text" class="input-form form-control datepicker" id="ngayNhapMau" title="{{tooltips['ngayNhapMau']}}" placeholder="{{date_nnm}}" name="ngayNhapMau" ng-model="data.ngayNhapMau">
